<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabHost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        	<FrameLayout
            	android:id="@android:id/tabcontent"
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent">
        		<LinearLayout
        	    	android:id="@+id/AutomatonTab"
        			android:orientation="vertical"
        			android:layout_width="fill_parent"
        			android:layout_height="fill_parent">

            		<TextView
        				android:layout_width="fill_parent"
        				android:layout_height="wrap_content"
        				android:layout_marginTop="10dip"
        				android:text="@string/automaton_prompt"/>
            
            		<LinearLayout
            			android:id="@+id/AutomatonSettings"
        				android:orientation="horizontal"
        				android:layout_width="fill_parent"
        				android:layout_height="wrap_content">
          
            			<Spinner 
        					android:id="@+id/AutoSpinner"
        					android:layout_width="wrap_content"
        					android:layout_height="wrap_content"
        					android:prompt="@string/automaton_prompt"/>
                 
     					<Button
     						android:id="@+id/ParameterButton"
     						android:layout_height="wrap_content"
     						android:layout_width="wrap_content"
     						layout_alignParentBottom="true"
     						android:text="@string/parameters"/>
               
               			</LinearLayout>
               
     				<TextView    				
        				android:layout_width="fill_parent"
        				android:layout_height="wrap_content"
        				android:layout_marginTop="10dip"
        				android:text="@string/seed_prompt"/>
          
          			<LinearLayout
          			    android:id="@+id/SeedSettings"
        				android:orientation="horizontal"
        				android:layout_width="fill_parent"
        				android:layout_height="wrap_content">
          
          
     					<Spinner 
        					android:id="@+id/SeedSpinner"
        					android:layout_width="wrap_content"
        					android:layout_height="wrap_content"
        					android:prompt="@string/seed_prompt"/>
    
						<Button
     						android:id="@+id/SeedParameterButton"
     						android:layout_height="wrap_content"
     						android:layout_width="wrap_content"
     						layout_alignParentBottom="true"
     						android:text="@string/seedparameters"/>
 
 					</LinearLayout>
 
           			<LinearLayout
          			    android:id="@+id/ResSettings"
        				android:orientation="horizontal"
        				android:layout_width="fill_parent"
        				android:layout_height="wrap_content">

     					<Spinner 
        					android:id="@+id/ResSpinner"
        					android:layout_width="wrap_content"
        					android:layout_height="wrap_content"
        					android:prompt="@string/res_prompt"/>
 
 					</LinearLayout>
 				
     			</LinearLayout>
 
 				<LinearLayout
        	    	android:id="@+id/CanvasTab"
        			android:orientation="vertical"
        			android:layout_width="fill_parent"
        			android:layout_height="fill_parent">         		

    				<Button
     					android:id="@+id/DrawButton"
     					android:layout_height="wrap_content"
     					android:layout_width="wrap_content"
     					layout_alignParentBottom="true"
     					android:text="@string/draw"/>

               		
               		<com.elusinian.cad.CAsurface
					android:id="@+id/CAimage" 
               		android:layout_width="fill_parent"
    				android:layout_height="wrap_content"
               		/>
              
               		                     		               		                    


				</LinearLayout>

        	</FrameLayout>

		</LinearLayout>
</TabHost>
